Move JavaScript to own file

--- a/index.html
+++ b/index.html
@@ -47,42 +47,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
         
-        <script type="application/javascript">
-            var data = {
-                labels: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'],
-                datasets: [{
-                    backgroundColor: "#00AA00",
-                    borderColor: "#eeeeee",
-                    borderWidth: 1,
-                    data: [
-                    200,
-                    120,
-                    80,
-                    120,
-                    10,
-                    15,
-                    60
-                    ]
-                }]
-            };
-            
-            window.onload = function() {
-                var ctx = document.getElementById('canvas').getContext('2d');
-                window.chart = new Chart(ctx, {
-                    type: 'bar',
-                    data: data,
-                    options: {
-                        responsive: true,
-                        title: {
-                            display: false,
-                            text: 'Your last week'
-                        },
-                        legend: {
-                            display: false,
-                        },
-                    }
-                });
-            };
-        </script>
+        <script src="main.js"></script> 
     </body>
     </html>
