--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <form>
             <div class="form-row">
                 <div class="col">
-                    <input type="text" class="form-control" placeholder="Description">
+                    <input v-model="description" type="text" class="form-control" placeholder="Description">
                 </div>
             </div>
             <div class="form-row">
                 <div class="col-md-4">
                     <label for="formControlRange">Duration</label>
                 </div>
-                <div class="col">
-                    <input type="range" class="form-Adtrol-range" min="1" max="180" value=15 step="1">
+                <div class="col-md-8">
+                    <input type="range" v-model="duration" class="form-Adtrol-range" min="1" max="180" value=15 step="1">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
@@ -43,7 +43,7 @@
         </div>
         
         <hr/>
-        {{ message }}
+        {{ description }} / {{ duration }}
     </div>
 </body>
 
