Retrieve submitted data from backend

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         
         <hr/>
         
-        <div class="text-center font-weight-bold large">21:30 hours studied!</p>
+        <div class="text-center font-weight-bold large">{{ totalMinutes}} minutes studied!</p>
             <canvas id="canvas"></canvas> 
         </div>
     </div>
