--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <form v-on:submit.prevent="onSubmit">
             <div class="form-row">
                 <div class="col">
-                    <input v-model.trim="description" type="text" class="form-control" placeholder="Description" autofocus="autofocus">
+                    <input v-model.trim="description" type="text" class="form-control" placeholder="Description" autofocus="autofocus" required="true">
                 </div>
             </div>
             <div class="form-row">
