Change brand name

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-primary fixed-top">
-        <a class="navbar-brand" href="#">time-tracker.de</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="collapse navbar-collapse" id="navbars">
-        </div>
+        <a class="navbar-brand" href="#">Sarah studiert...</a>
     </nav>
     
     <div class="container" id="app">
