--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <title>A mobile-first time tracker</title>
 </head>
 
-<body><div  id="app">
+<body><div  id="app" v-cloak>
     <nav class="navbar navbar-dark bg-primary fixed-top">
         <a class="navbar-brand" href="#">{{config.title}}</a>
     </nav>
@@ -23,7 +23,10 @@
                     <div class="duration">{{ parsed(duration) }}h</div>
                 </div>
                 <div class="form-group col-md-10">
-                    <input type="range" v-model.number="duration" class="form-control" min="5" max="180" value=15 step="5">
+                    <input type="range" v-model.number="duration" class="form-control" 
+                    :min= "config.steps.min"
+                    :max= "config.steps.max" 
+                    :step="config.steps.size">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
