--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                     <div class="duration">{{ parsed(duration) }}h</div>
                 </div>
                 <div class="form-group col-md-10">
-                    <input type="range" v-model.number="duration" class="form-control" 
+                    <input type="range" v-model.number="duration" class="form-control slider" 
                     :min= "config.steps.min"
                     :max= "config.steps.max" 
                     :step="config.steps.size">
