--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
         
         <hr/>
         
+        <div class="text-center">{{ differenceToGoal }}</div>
         <div class="text-center font-weight-bold large">{{ parsed(totalMinutes)}} hours!</p>
             <canvas id="canvas"></canvas> 
         </div>
