Remove autofocus on description
Issue #25

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <form v-on:submit.prevent="onSubmit">
             <div class="form-row">
                 <div class="col">
-                    <input v-model.trim="description" type="text" class="form-control" placeholder="Description" autofocus="autofocus" required="true">
+                    <input v-model.trim="description" type="text" class="form-control" placeholder="Description" required="true">
                 </div>
             </div>
             <div class="form-row">
