Add weekly goal time tracking

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
         </form>
         
         <hr/>
-
+        <canvas id="goal" style="display: none;" height="50"></canvas> 
+        
         <div class="text-center">{{ differenceToGoal }}</div>
         <div class="text-center font-weight-bold large">{{ parsed(totalMinutes)}} hours!</p>
             <canvas id="canvas"></canvas> 
