Show rewarding message on reached goal

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         
         <hr/>
         <canvas id="goal" style="display: none;" height="50"></canvas> 
+        <div v-if="showReward" class="reward"> {{ config.reward }} </div>
         
         <div class="text-center">{{ differenceToGoal }}</div>
         <div class="text-center font-weight-bold large">{{ parsed(totalMinutes)}} hours!</p>
